--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
   <head>
-    <title>Jovians website</title>
+    <title>Nina career website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -27,7 +27,7 @@
      </div>
     <div class="text-center">
    <button  class="btn btn-primary">CONTACT US</button><br><br>
-    <p>&copy Copyrights 2023,Reddy</p>
+    <p>&copy Copyrights 2023,NINA</p>
     
     </div>
     
